openturns/1.16/_sources/auto_functional_modeling/field_functions/plot_value_function.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_functional_modeling_field_functions_plot_value_function.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_functional_modeling_field_functions_plot_value_function.py:


Value function
==============

A value function
:math:`f_{value}: \mathcal{D} \times \mathbb{R}^d \rightarrow \mathcal{D} \times \mathbb{R}^q` is a
particular field function that lets invariant the mesh of a field
and defined by a function :math:`g : \mathbb{R}^d  \rightarrow \mathbb{R}^q` such that:

.. math::
   \begin{aligned} f_{value}(\underline{t}, \underline{x})=(\underline{t}, g(\underline{x}))\end{aligned}

Let's note that the input dimension of :math:`f_{value}` still designs the
dimension of :math:`\underline{x}` : :math:`d`. Its output dimension is equal to :math:`q`.

The creation of the *ValueFunction* object requires the
function :math:`g` and the integer :math:`n`: the dimension of the
vertices of the mesh :math:`\mathcal{M}`. This data is required for tests on the
compatibility of dimension when a composite process is created using the
spatial function.


The use case illustrates the creation of a spatial (field) function
from the function :math:`g: \mathbb{R}^2  \rightarrow \mathbb{R}^2` such as :

.. math::
   \begin{aligned}
     g(\underline{x})=(x_1^2, x_1+x_2)
   \end{aligned}



.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    import math as m
    ot.Log.Show(ot.Log.NONE)








Create a mesh


.. code-block:: default

    N = 100
    mesh = ot.RegularGrid(0.0, 1.0, N)








Create the function that acts the values of the mesh


.. code-block:: default

    g = ot.SymbolicFunction(['x1', 'x2'],  ['x1^2', 'x1+x2'])








Create the field function


.. code-block:: default

    f = ot.ValueFunction(g, mesh)








Evaluate f


.. code-block:: default

    inF = ot.Normal(2).getSample(N)
    outF = f(inF)

    # print input/output at first mesh nodes
    xy = inF
    xy.stack(outF)
    xy[:5]





.. raw:: html

    <TABLE><TR><TD></TD><TH>X0</TH><TH>X1</TH><TH>y0</TH><TH>y1</TH></TR>
    <TR><TH>0</TH><TD>0.595711</TD><TD>0.479533</TD><TD>0.3548715</TD><TD>1.075244</TD></TR>
    <TR><TH>1</TH><TD>-1.916242</TD><TD>0.8543916</TD><TD>3.671985</TD><TD>-1.061851</TD></TR>
    <TR><TH>2</TH><TD>-0.750542</TD><TD>-0.04730826</TD><TD>0.5633132</TD><TD>-0.7978502</TD></TR>
    <TR><TH>3</TH><TD>-1.220656</TD><TD>-0.2129773</TD><TD>1.49</TD><TD>-1.433633</TD></TR>
    <TR><TH>4</TH><TD>-0.09821222</TD><TD>0.5049109</TD><TD>0.009645641</TD><TD>0.4066986</TD></TR>
    </TABLE>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.003 seconds)


.. _sphx_glr_download_auto_functional_modeling_field_functions_plot_value_function.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_value_function.py <plot_value_function.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_value_function.ipynb <plot_value_function.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
